
2004-09-09  Florian Boor <florian@kernelconcepts.de>

	* Makefile: Changed location of lock script.

2004-09-08  Florian Boor <florian@kernelconcepts.de>

	* gpe-login.c (main): Don't show ownerinfo it is disabled by user.

2004-08-29  Phil Blundell  <pb@nexus.co.uk>

	* gpe-login.c (main): Clear CAN_FOCUS flag on "OK" button.

2004-07-06  Philip Blundell  <philb@gnu.org>

	* Version 0.72 released.
	
2004-07-06  Philip Blundell  <philb@gnu.org>

	* gpe-login.c (main): Constrain aspect ratio of embedded keyboard.

2004-07-04  Philip Blundell  <philb@gnu.org>

	* Version 0.71 released.

2004-07-04  Philip Blundell  <philb@gnu.org>

	* gpe-login.c (main): Tweak packing options for new-user mode.

2004-07-04  Philip Blundell  <philb@gnu.org>

	* Version 0.70 released.

2004-07-04  Philip Blundell  <philb@gnu.org>

	* X11/gpe-login.gtkrc: Change background colour.

	* gpe-login.c (main): If in full-screen mode, choose font
	according to screen width.

2004-07-03  Philip Blundell  <philb@gnu.org>

	* Version 0.69 released.
	
2004-07-03  Philip Blundell  <philb@gnu.org>

	* gpe-login.c (my_error_box): New.
	(enter_newuser_callback): Use it.
	(enter_root_callback): Likewise.
	(main): Tweak packing attributes.  Disable calibration hint
	temporarily.

2004-06-23  Philip Blundell  <philb@gnu.org>

	* Version 0.68 released.
	
2004-06-23  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add es.

2004-06-12  Philip Blundell  <philb@gnu.org>

	* Version 0.67 released.
	
2004-06-12  Philip Blundell  <philb@gnu.org>

	* Makefile (MEMBERS): Remove nocursor.
	* nocursor.c: Deleted.

2004-03-08  Philip Blundell  <philb@gnu.org>

	* Version 0.66 released.

2004-03-08  Philip Blundell  <philb@gnu.org>

	* po/cs.po, po/fr.po, po/hu.po, po/ro.po, po/ru.po, po/sk.po,
	po/sr.po: New.

	* gpe-login.buttons: Obsolete.  Deleted.

	* X11/Xinit.d, X11/Xsession.d, X11/xsettings.default,
	standard.mbdock, gpe-logout.desktop.in, gpe-logout.png,