@@ -1,6 +1,7 @@
 
 2004-09-09  Florian Boor <florian@kernelconcepts.de>
 
+	* main.c: Honor ownerinfo setting without restart.
 	* Makefile: Changed location of lock script.
 
 2004-09-08  Florian Boor <florian@kernelconcepts.de>
